# copiers_python_simple

./: .gitignore  README.md  copier.yaml  main.py  pyproject.toml  requirements.txt
