[tool.poetry]
name = "{{ project_name | lower | replace(' ', '-') }}"
version = "0.1.0"
description = "{{project_description}}"
authors = ["{{ copyright_holder }}"]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.scripts]
run = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 